Fix colored bar on bottom of landing page on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,6 @@ h1, h3, h6, p {
 }
 
 .container {
-  background-image: linear-gradient(rgb(90, 90, 110), rgb(60, 60, 80));
   width: 100%;
   height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
@@ -342,6 +341,10 @@ button:active {
 }
 
 @media only screen and (min-width: 800px) {
+  .container {
+    background-image: linear-gradient(rgb(90, 90, 110), rgb(60, 60, 80));
+  }
+
   .centered-form__form {
     float: left;
     margin: 0px;
@@ -352,13 +355,13 @@ button:active {
     width: calc(55% - 140px);
     text-align: justify;
   }
-/* 
-  .chat__main {
-    float: right;
-  } */
 }
 
 @media only screen and (max-width: 799px) {
+  .container {
+    background-color: white;
+  }
+  
   html, body {
     font-size: 13px;
   }
